--- a/_config.yml
+++ b/_config.yml
@@ -14,19 +14,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: pascal bättig / SRE / DevOps / Linux System Engineering
-email: pbaettig@gmail.com
+header_title: pascal bättig
 description: >- # this means to ignore newlines until "baseurl:"
   Open Source fanboy looking for interesting projects & positions
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.caspal.ch" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  pbaettig
+linkedin_username: pascal-bättig
 
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
-  - jekyll-feed
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
